Fix name too long overflow (#51)
* Fix name too long overflow

* Fix breadcrumb

--- a/client/src/components/directory/FsDirectory.css
+++ b/client/src/components/directory/FsDirectory.css
@@ -12,6 +12,11 @@
   flex: 1;
   padding-left: 10px;
   padding-right: 10px;
+  overflow: auto;
+  overflow-wrap: break-word;
+}
+
+.title {
   color: var(--primaryText);
 }
 
