--- a/client/src/components/directory/FsFile.css
+++ b/client/src/components/directory/FsFile.css
@@ -16,6 +16,8 @@
   flex: 1;
   padding-left: 10px;
   padding-right: 10px;
+  overflow: auto;
+  overflow-wrap: break-word;
 }
 
 .name {
